# vacancy-ai-agent

./: .env.example  .gitignore  README.md  config.py  graph.py  main.py  nodes.py  pyproject.toml  schema.py  test_search_routing.py
agents/: auditor.py  finance.py  mentor.py  scout.py
examples/: backend_python_developer.json  frontend_developer.json  go_backend.json  ios_developer_swift.json  java_backend.json  metrics.json  ml_engineer.json
utils/: format.py  requester.py  telemetry.py
