[project]
name = "vacancy-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "fpdf2>=2.8.7",
    "httpx>=0.28.1",
    "langgraph>=1.1.10",
    "nest-asyncio>=1.6.0",
    "pydantic-ai[openai]>=1.93.0",
    "python-dotenv>=1.2.2",
    "tavily>=1.1.0",
]
